--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 management.endpoints.web.exposure.include=*
+app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
