--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,9 +9,7 @@ spring:
             on-profile: dev
   data:
     mongodb:
-      host: localhost
-      port: 27017
-      database: mydb
+      uri: mongodb+srv://root:WBJsDZphl9loQGt4@mongodb.lqmn4.mongodb.net/onboarding-prudential?retryWrites=true&w=majority
 
 eureka:
   instance:
