--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
                 </configuration>
             </plugin>
 		</plugins>
+		<finalName>onboarding-task-service</finalName>
 	</build>
 
 </project>
