--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,17 +9,19 @@ spring:
             on-profile: dev
   data:
     mongodb:
-      uri: mongodb+srv://root:WBJsDZphl9loQGt4@mongodb.lqmn4.mongodb.net/onboarding-prudential?retryWrites=true&w=majority
+      host: 10.5.0.7
+      port: 27017
+      database: mydb
 
 eureka:
   instance:
-    hostname: ${vcap.application.uris[0]:localhost}
+    hostname: ${vcap.application.uris[0]:10.5.0.5}
     prefer-ip-address: true
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 20
   client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+    serviceUrl:
+      defaultZone: http://10.5.0.5:8761/eureka
       
 #  zipkin:
 #    base-url: http://127.0.0.1:9411/
@@ -48,4 +50,8 @@ eureka:
 #    username: postgres
 #    password: admin
 #    driverClassName: org.postgresql.Driver
+
+#data:
+#    mongodb:
+#      uri: mongodb+srv://root:WBJsDZphl9loQGt4@mongodb.lqmn4.mongodb.net/onboarding-prudential?retryWrites=true&w=majority
   
